feat: favicon 추가

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css
 "
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>이과문과</title>
+    <title>SOBI</title>
   </head>
   <body>
     <div id="root"></div>
