--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css
 "
       rel="stylesheet"
     />
+    <link href="https://fonts.cdnfonts.com/css/franchise" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/gabo-drive" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOBI</title>
